<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:id="@+id/scrollView_mains_screen"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".MainActivity$PlaceholderFragment">

        <ImageView
            android:id="@+id/imageView_start_screen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/remindmetvmedium" />

        <TextView
            android:id="@+id/textView_startscreen_welcome_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/textView_welcome_message"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/textView_startscreen_tip"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/editText_startscreen_search"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:gravity="center"
                android:hint="@string/editText_startscreen_search_hint"
                android:background="@drawable/transition_edittext_main_screen"
                android:maxLines="1"/>

            <ImageButton
                android:id="@+id/imageButton_startscreen_search"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:background="@drawable/transition_imagebutton_main_screen"
                android:src="@drawable/searchmedium" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

    </LinearLayout>
</ScrollView>